fix: correciones despliegue v1

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-    "builds": [
-      {
-        "src": "index.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.py"
-      }
-    ]
- }
+  "version": 1,
+  "builds": [
+    { "src": "main.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/main.py" }
+  ],
+  "env": {
+    "APP_MODULE": "main:app"
+  }
+}
